--- a/style.css
+++ b/style.css
@@ -286,10 +286,17 @@
 
 }
 .main-content{
-    
+    background-color: #fff;
     width:100vw;
-    margin:auto;
+    
     min-height:50vh;
+}
+
+.main-content > div:nth-child(odd){
+    animation: Show 10s ease-in 5s 1 ;
+}
+.main-content > div:nth-child(even){
+    animation: fall 10s ease-in 5s 1 ;
 }
 .main-img, .main-cont-1,.main-cont-2{
    
@@ -298,9 +305,10 @@
 }
 .main-cont-1, .main-cont-2, .main-cont-3, .main-space{
     width:100vw;
-    max-height: 300vh;
+    max-height: fit-content;
     text-align: justify;
 }
+
 .main-cont-1 > div{
     width: 60vw;
     padding-right: 30px;
@@ -321,12 +329,15 @@
     display: flex;
     width:80vw;
     margin:auto;
-  
+    animation: Show 10s ease-in 5s 1 ;
     height: fit-content;
     justify-content: center;
     align-items: center;
     align-content: space-around;
 
+}
+.main-container  div{
+    animation: Show 10s ease-in 5s 1 ;
 }
 .main-content > div{
     width: 80vw;
@@ -344,7 +355,7 @@
     font-size: 24px;
     width:80vw;
     height: fit-content;
-    margin:auto;
+    margin:0 auto;
     padding:25px 0px;
 }
 .main-content-title{
@@ -356,6 +367,16 @@
 .sub-title{
     color:rgb(57, 12, 161);
     font-size:18px;
+}
+.main-title{
+    padding: 20px;
+    font-size:28px;
+    font:bold;
+    color: rgb(241, 15, 15);
+    width: 80vw;
+    border-bottom: 2px solid rgb(241, 15, 15);
+    text-align: center;
+    margin-bottom: 25px ;
 }
 .sub-list li{
     font-size:18px;
@@ -369,8 +390,49 @@
     margin-left:40px;
     line-height: 1.75;
 }
-.health-content > div{
+.health-content > div, .services-content > div{
     height:fit-content;
+}
+.health-content  h2,.services-content h2{
+    padding:25px 15px;
+}
+.health-cont-1,
+.health-cont-2{
+   min-height: 60vh;
+   padding: 70px 10px;
+}
+.health-cont-1 p,.servives-cont-1 p,
+.health-cont-2 {
+    line-height:1.75;
+    margin-bottom: 25px;
+}
+
+.services-cont-1{
+    width: 50%;
+    padding:30px;
+ 
+}
+.services-cont-2{
+    width: 50%;
+
+}
+.services-cont-2  > div,
+.services-cont-2  > p{
+ 
+    width:90%;
+    margin: 5px;
+    padding: 10px;
+}
+.service-content{
+    width:100vw;
+}
+.service-content > .main-container{
+    width: 80vw;
+    min-height: 100vh;
+}
+.service-content .main-container > div p{
+    
+    margin-bottom:25px;
 }
 .sub-list li span{
     color: black;
@@ -388,6 +450,12 @@
     height:100vh;
     background: rgba(8, 2, 41,0.7) url('./img/health-bg.jpg') no-repeat fixed;
     background-size: cover;
+}
+.services-img{
+    width:100vw;
+    height:100vh;
+    background: rgba(8, 2, 41,0.7) url('./img/services-2.jpg') no-repeat fixed;
+    background-size: 100vw 100vh;
 }
 /* Gallery */
 .home-gallery{
@@ -451,6 +519,8 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    align-items: center;
+    align-content: center;
     padding: 10px;
 }
 .footer-top-left{
@@ -493,6 +563,7 @@
     align-content: center;
     align-items: center;
     text-align: center;
+
 }
 .footer span{
     padding: 5px 10px;
@@ -525,21 +596,181 @@
 /* Healthcare */
 .health-header-bg{
     background: url('./img/healthcare.jpg') no-repeat fixed;
-    background-attachment:cover;
+    background-size:cover;
     width:100vw;
     height:calc(100vh - 100px);
 }
 .health-main-img{
-    width: 70vw;
+    width: 70%;
     min-height: 100px;
     padding:20px 25px; 
     margin: auto;
 }
 .health-main-img > img{
     width:80%;
+    display: block;
     height:auto;
+    margin:auto;
+}
+.health-container-1{
+
+    display: block;
+}
+/* Services */
+.services-header-bg{
+    background: url('./img/services-3.jpg') no-repeat fixed;
+    background-size:cover;
+    width: 100vw;
+    height:calc(100vh - 100px);
+}
+.service-quote > q{
+    display: block;
+    width:60%;
+    margin:auto;
+}
+.service-container  p,
+.service-container  ul
+,.service-container  div{
+    width:100%;
 }
 
+
+/* about us */
+.about-header-bg{
+    background: url('./img/services-header-bg.jpg') no-repeat fixed;
+    background-size:cover;
+    width:100vw;
+    height:calc(100vh - 100px);
+}
+.growth-content{
+    width:100vw;
+}
+.about-img-container{
+    overflow-x: scroll;
+    width:80vw;
+    margin:auto;
+}
+.growth {
+
+    width:auto;
+    height: auto;
+
+
+}
+/* Contact us */
+
+.donate-us{
+    width:100vw;
+    position: relative;
+    background-color: #eee;
+
+
+}
+.donate-us input
+{
+    border-radius: 30px;
+}
+
+.donate-us input,
+.donate-us label,
+.donate-us select{
+    width: 80%;
+    
+    display: block;
+    padding: 10px 20px;
+    margin: 15px auto;
+}
+.donate-us input[type="submit"]{
+    width:40%;
+    background-color: #4910b4c2;
+    margin: 15px auto;
+    color:#fff;
+}
+
+.donate-us form a{
+    
+    font-size: 18px;
+    text-decoration: none;
+}
+.donate-us form a:hover{
+    text-decoration: none;
+}
+
+.pay-title{
+    
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    text-align: center;
+    background-color: #4910b4c2;
+    color: #e5e5e5;
+    margin:15px auto;
+}
+.pay-title:nth-child(odd){
+  width: 100%;
+  height: 80px;
+}
+.pay-title:nth-child(even){
+    width: 90px;
+}
+.donate-us form{
+    width:75%;
+    
+}
+.pay-option{
+    width: 100%;
+    margin: auto;
+    height: auto;
+    background: #e5e5e5;
+    color: #4910b4c2;
+    position: relative;
+}
+.pay-option:hover{
+    background:#4910b4c2;
+    
+}
+.pay-option h2{
+    color: #4910b4c2;
+    
+}
+.donate-us form{
+    width:80%;
+    margin: auto;
+}
+.pay-option:hover h2,
+.pay-option:hover i,
+.pay-option:hover a
+
+{   
+    color:#e5e5e5;
+    
+}
+
+.debit-container{
+    display:none;
+}
+
+.credit-container{
+    display: none;
+}
+.pay-down{
+    position: absolute;
+    right: 40px;
+    top:20px;
+}
+#credit-card:target > .credit-container,
+#debit-card:target > .debit-container{
+    display: block;
+}
+
+.donate-title a{
+    display: block;
+    width: 100%;
+    text-align: center;
+    color: #e5e5e5;
+    text-decoration: none;
+}
 /*
 .slider-1{
     top:0;
@@ -587,7 +818,10 @@
         display: block;
     }
     .main-img{
-        height:80vh;
+        height:60vh;
+
+        background-size: 100vw 100vh;
+
     }
     .main-cont-2{
         display: none;
@@ -700,8 +934,23 @@
         z-index: 2;
     }
     .health-header-bg {
+        width:100vw;
         height: 80vh;
         z-index: 2;
+    }
+    .health-content div,
+    .health-content p,
+    .health-content h2
+
+    {
+        margin:0;
+        padding:0;
+    }
+    .health-cont-1{
+        width:100%;
+        margin:0;
+        padding: 0;
+        height: fit-content;
     }
 
     .signin-form, .login-form{
@@ -736,7 +985,7 @@
         flex-direction: column;
     }
     .footer-contact > div{
-        width:fit-content;
+        width:50%;
         text-align: center;
         display: flex;
     }
@@ -746,11 +995,114 @@
     .img-container{
         width:100vw;
     }
+    .service-quote > q{
+       
+        width:90%;
+        margin:auto;
+    }
+    .service-content div {
+        width: 100vw;
+        padding:10px;
+    }
+    .service-content > .main-container{
+        width:100vw;
+    }
+    .service-content div {
+        width:100%;
+        margin: 0;
+    
+    }
+    .service-content div p{
+        margin: 0;
+        padding-left:0 ;
+    }
+    .growth {
+
+        width:100vh;
+        height: 100%;
+    
+    
+    }
+    .contact-main .main-cont-1{
+        margin: 0;
+    }
+    .donate-us{
+        width: 100%;
+    }
+    .donate-us form label,
+    .donate-us form select,
+    .donate-us form input,
+    .donate-us div{
+       width: 100%;
+       margin:5px;
+         padding: 8px;
+   }
+   .pay-down{
+       top:15px;
+       right: -30%;
+   }
+   .pay-option h2{
+    width:auto;
+    text-align: left;
+    padding-left: 30px;
+   }
+   .footer{
+    width:100vw;
+   
+}
+
+.footer-top{
+    width: 100%;
+    height: auto;
+    flex-direction: column;
+    justify-content:center;
+    align-content: flex-start;
+    align-items: center;
+
+
+
+}
+.footer-top > div{
+    margin: 10px;
+}
+.footer-top-left{
+width: 100%;
+   margin: 10px;
+}
+
+.footer-sm{
+width: 100%;
+   margin: auto;
+   justify-content: center;
+   align-items:center;
+   align-content: space-around;
+   flex-direction: row;
+}
+.footer-contact{
+    width: 100%;
+    margin: auto;
+    justify-content: center;
+    align-items:center;
+    align-content: center;
+    flex-direction: row;
+}
+.footer-contact > div{
+    font-size: 22px;
+    font-weight: bold;
+}
+.footer-email div{
+   display: flex;
+   flex-direction: column;
+}
+
 
 }
 
 
 @media(max-width:520px){
+    *{
+        font-size: 14px;
+    }
    .header{
        width:fit-content;
        height: 100vh;
@@ -823,6 +1175,10 @@
     .main-content-title{
         font-size: 18px;
     }
+    .main-title{
+        text-align: left;
+        padding-left: 50px;
+    }
     .header-bg {
         height: 100vh;
         z-index: 2;
@@ -838,10 +1194,11 @@
         padding:10px;
     }
     .main-content > h2{
-        margin-left:20px;
+        padding-left:20px;
     }
+  
     .slider{
-        margin-top:50%;
+       
         width: 100vw;
         max-height:50vh;
         z-index: 2;
@@ -860,41 +1217,41 @@
     }
   
     .footer-top{
-        width:80vw;
-        margin:auto;
+        width: 100%;
+        height: auto;
         flex-direction: column;
-        justify-content: center;
-        align-items: flex-start;
-        align-content: space-around;
-    }
-    .footer-top-left, .footer-top-right, .footer-contact{
-        width:100vw;
+        justify-content:center;
+        align-content: flex-start;
+        align-items: center;
+    
+
+
     }
     .footer-top > div{
-        padding:10px 20px;
+        margin: 10px;
     }
-    .footer-sm{
-        width:100vw;
-        flex-direction: row;
-        justify-content: space-around;
-        align-content: space-around;
-        align-items: center;
-    }
-
-    .footer-contact > div > span{
-        width:fit-content;
-    }
-    .footer-contact > div{
-        width:90vw;
-        flex-direction: row;
-    }
-    .footer-contact > div > div{
-        display:flex;
-        flex-direction: column;
-        align-items: center;
-        align-content: center;
-        justify-content: center;
-    }
+   .footer-top-left{
+    width: 100%;
+       margin: 10px;
+   }
+  
+   .footer-sm{
+    width: 100%;
+       margin: auto;
+       justify-content: center;
+       align-items:center;
+       align-content: space-around;
+       flex-direction: row;
+   }
+   .footer-contact{
+       width: 100%;
+       justify-content: flex-start;
+       
+   }
+   .footer-email div{
+       display: flex;
+       flex-direction: column;
+   }
     .home-gallery{
         justify-content: space-around;
     }
@@ -922,17 +1279,148 @@
         padding-top:15px;
         height: 100px;
     }
+    .health-img{
+        height: 60vh;
+        background-size:100vw 100vh;
+        padding: 0;
+        margin: 0;
+    }
     .health-main-img{
-        width:95vw;
+        display: block;
+        width:90%;
         margin:auto;
     }
     .health-main-img > img{
-        width:85%;
+        width:100%;
         height: auto;
     }
+    .health-cont-1{
+        min-height: 50vh;
+    }
+    .health-cont-1 p{
+        line-height: 1.75;
+    }
+    .health-cont-1, .health-cont-1 p
+    {
+        margin:0;
+        padding: 0;
+    }
+    .sub-title{
+        margin: 0;
+        font-size: 16px;
+        padding: 0;
+    }
+    .main div{
+        margin:0;
+        padding: 0;
+    }
+    .main-container{
+        width: 100%;
+    }
+    .main-content div, .main-content p{
+        padding: 10px;
+    }
+    .main-cont-1 div, .main-cont-2 div{ 
+        padding:20px 10px;
+    }
+    .main-list,    .main-content p{
+        padding: 10px;
+    }
+    .sub-list{
+        margin:0;
+        margin-left:0;
+        padding: 0;
+        
+    }
+    .sub-list li{
+        margin-left: 30px;
+    }
+  
+   *{
+       width:fit-content;
+       
+       margin:0;
+   }
+   body{
+       width:100vw;
+       
+       height: fit-content;
+   }
+   .header-bg{
+       height:100vh;
+       background-size: cover;
+   }
+   .donate-us{
+       width: 100vw;
+   }
+   .donate-us  div,
+   .donate-us  form
+{
+   width: 100%;
+   margin:0;
+   padding: 0;
+
+   }
+    .donate-us form label,
+    .donate-us form select,
+    .donate-us form input{
+       width: 100%;
+       margin:4px;
+   padding: 8px;
+   }
+
+   .pay-option{
+       width:100%;
+       overflow: hidden;
+       position: relative;
+   }
+   .pay-option:nth-child(odd){
+       width: 95%;
+       margin: 10px auto;
+
+   }
+   .pay-option:nth-child(odd) h2{
+       text-align: center;
+       width: 100%;
+
+   }
+   .pay-option:nth-child(even){
+    width: 15%;
+    height: auto;
+  
+}
+   
+   .donate-us input[type="submit"]{
+       width:80%;
+   }
+   .contact-main div,
+   .contact-main p
+{
+    margin:0;
+    padding: 5px;
+}
+.pay-down {
+    width:fit-content;
+    height: auto;
+    top:20px;
+    right:-30%;
+
+    padding: 0;
+}
+.pay-down h2 a{
+    width:fit-content;
+
 
 }
-
+.pay-option h2{
+    width:auto;
+    text-align: left;
+    margin-left: -30px;
+   }
+   .map h2{
+       width: 100%;
+   }
+}
 @keyframes slider{
     0%{
         left:0;
@@ -950,3 +1438,39 @@
         left:0;
     }
 }
+
+@keyframes Show{
+  0%{
+   opacity: 0;
+  }
+  25%{
+opacity: 0.3;
+  }
+  50%{
+   opacity: 0.6;
+  }
+  70%{
+    opacity: 0.7;
+  }
+  100%{
+ opacity: 1;
+  }
+}
+@keyframes fall{
+    0%{
+        opacity: 1;
+       }
+       25%{
+     opacity: 0.7;
+       }
+       50%{
+        opacity: 0.0;
+       }
+       70%{
+         opacity: 0.7;
+       }
+       100%{
+      opacity: 1;
+       }
+}
+
